# Xboard_Client

./: .gitignore  CLAUDE.md  README.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  leaf_jni.cpp
app/src/main/res/anim/: breathing_glow.xml  pulse_animation.xml
app/src/main/res/animator/: button_state_animator.xml
app/src/main/res/color/: bottom_nav_item_color.xml  tab_bar_icon_color.xml
app/src/main/res/drawable/: blue_glow_ring.xml  bottom_nav_background.xml  btn_vpn_gradient.xml  circle_background.xml  connection_button_background.xml  connection_button_background_connected.xml  connection_button_glow.xml  connection_button_inner.xml  connection_button_selector.xml  connection_button_selector_connected.xml  connection_indicator.xml  connection_status_background.xml  connection_status_background_disconnected.xml  current_plan_background.xml  edit_text_background.xml  flag_cn.xml  flag_hk.xml  flag_jp.xml  flag_kr.xml  flag_tw.xml  flag_us.xml  ic_arrow_right.xml  ic_cart.xml  ic_check.xml  ic_connected.xml  ic_dark_mode.xml  ic_disconnected.xml  ic_flag_default.xml  ic_home.xml  ic_home_filled.xml  ic_info.xml  ic_lightning.xml  ic_logo.xml  ic_logout.xml  ic_moon.xml  ic_more_horiz.xml  ic_plans.xml  ic_power.xml  ic_power_switch.xml  ic_profile.xml  (+32 more)
app/src/main/res/layout/: activity_auth.xml  activity_main.xml  dialog_node_select.xml  dialog_subscription.xml  fragment_home.xml  (+10 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+39 files in other folders)
